src/objects/Services__c.object
<CustomObject>
    <fields>
        <fullName>Accessibility__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the free text box if required</inlineHelpText>
        <label>Venue Accessibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Code_Part_1__c</fullName>
        <label>Activity Code (Part 1)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Code_Part_2__c</fullName>
        <label>Activity Code (Part 2)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Add any other specific information on toilets/parking/refreshments/venue accessibility if required</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amended_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amended by</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Dementia Connect Administrator</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Dementia_Connect_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changes Needs Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_area_code__c</fullName>
        <label>Branch area code</label>
        <picklist>
            <picklistValues>
                <fullName>EAEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EALO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NISW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WECW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WESW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEWM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch_email__c</fullName>
        <label>Branch email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <label>Branch name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_telephone__c</fullName>
        <label>Branch telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>service_type__c</controllingField>
            <picklistValues>
                <fullName>Information &amp; Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnosis &amp; Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support &amp; Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities &amp; Social Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncategorised (Unpublished</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Change_Needs_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System generated tick if you have made any changes to the service record so the Service Manager can approve them.</inlineHelpText>
        <label>Changes Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_first_name__c</fullName>
        <label>Contact first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_last_name__c</fullName>
        <label>Contact last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_salutation__c</fullName>
        <label>Contact title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_Record_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Record Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <formula>Locality__r.COst_Centre__c</formula>
        <label>Cost Centre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_Site__c</fullName>
        <formula>IF( CreatedBy.UserRole.Name  == &quot;Guidebook Volunteer&quot; ,
 TEXT( Site__c ),
CreatedBy.UserRole.Name)</formula>
        <label>DA Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_per_week__c</fullName>
        <label>zzdel_Days per week</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the venue where your service takes place from the pick list. If your venue is not listed, please contact your Area Coordinator or Locality Administrator</inlineHelpText>
        <label>Service Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Dementia Connect - Services</relationshipLabel>
        <relationshipName>Services_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>zzdel_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_public_website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on public website?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Easting__c</fullName>
        <label>Easting</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Break_Even__c</fullName>
        <inlineHelpText>Enter the number of months this service would take to break even if funded entirely by self funders and/or personal budgets - in Months</inlineHelpText>
        <label>Estimated Break Even</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation__c</fullName>
        <inlineHelpText>Describe any special evaluation requirements, over and above the standard service specification</inlineHelpText>
        <label>Evaluation</label>
        <length>16384</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Evaluation__c</fullName>
        <description>Will there be external evaluation</description>
        <inlineHelpText>Will there be external evaluation</inlineHelpText>
        <label>External Evaluation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formal_Alzheimer_s_Caf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal Alzheimer&apos;s Café</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From_Services_db__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Services db?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funder_restriction__c</fullName>
        <inlineHelpText>Enter if the service is restricted to a specific group based on location eg. Residents of London Borough of Wandsworth only</inlineHelpText>
        <label>Funder restriction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Getting_There__c</fullName>
        <inlineHelpText>Record any additional information regarding public transport/directions by car or on foot</inlineHelpText>
        <label>Getting There</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Image_Doc_ID__c</fullName>
        <label>Image Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Evaluation_Methods__c</fullName>
        <description>The method for internal evaluation</description>
        <inlineHelpText>What methods will be used to evaluate the service ?</inlineHelpText>
        <label>Internal Evaluation Methods</label>
        <picklist>
            <picklistValues>
                <fullName>Questionnaires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Assessment Mapping (I AM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_Address_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Known_As__c</fullName>
        <inlineHelpText>Option to record a local name for your service which will appear on the Dementia Connect Online Directory</inlineHelpText>
        <label>Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Reviewed__c</fullName>
        <label>Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Total_Quality_Review__c</fullName>
        <label>Last Total Quality Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leaflet__c</fullName>
        <label>Leaflet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_on_CRS__c</fullName>
        <description>True if either the Locality or the Operated By are live on CRS</description>
        <formula>IF( Locality__r.Live_on_CRS__c  ||  Operated_By__r.Live_on_CRS__c ,&quot;true&quot;, &quot;false&quot;)</formula>
        <label>Live on CRS?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <label>Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Locality in which this service is based (left blank for national services).</description>
        <label>Locality</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an Alzheimer&apos;s Society Locality.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>Locality</value>
            </filterItems>
            <infoMessage>Please select a Locality.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Services_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Accuracy__c</fullName>
        <label>Location Accuracy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Status__c</fullName>
        <label>Location Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <description>Link to map object</description>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b700000012vSo&amp;eid=&quot; &amp;Id, IMAGE( &quot;/resource/GoogleMaps&quot;, &quot;GoogleMaps&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Service?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Approval__c</fullName>
        <description>Highlight any records that need approval</description>
        <formula>AND( OR(TEXT(service_status__c)==&quot;Open&quot;, TEXT(service_status__c)==&quot;Pending&quot;   ), Record_Type_Name__c==&apos;Internal&apos;,  Display_on_public_website__c ,  Change_Needs_Approval__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If true then this record will not appear on the website until the record has been sent for approval.</inlineHelpText>
        <label>Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Northing__c</fullName>
        <label>Northing</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Posts_Staff__c</fullName>
        <label>#Posts - Staff</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Any_People_with_Dementia__c</fullName>
        <label>#Places Available - Any People with Deme</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Older_People_with_Dementia__c</fullName>
        <label>#Places Available - Older People with De</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <label>#Posts - Volunteers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Younger_People_with_Dementia__c</fullName>
        <label>#Places Available - Younger People with</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldPhoto__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp;  Image_Doc_ID__c , &quot;&quot;)</formula>
        <label>OldPhoto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_to_self_funders_Personal_budgets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this option if this is a paid for service that people can purchase with a personal budget or as a self funder. This should only be selected where there is a full or significant contribution towards the full cost of the service being received.</inlineHelpText>
        <label>Open to self funders/Personal budgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opening_Times_Guidebook__c</fullName>
        <inlineHelpText>Record the days and times the service is available in the following format: Monday and Thursday, 2pm -5pm</inlineHelpText>
        <label>Service Opening times</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the Organisation which operates this service.</description>
        <inlineHelpText>For internal services this should be a local service office unless operated at the locality level</inlineHelpText>
        <label>Operated By</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND (3 OR 4)) OR (5 AND 6)</booleanFilter>
            <errorMessage>Internal Services can only be operated by a Locality or a Local Service Office (this lookup is filtered based on the Locality you selected in the previous field).
External Services can only be Operated By an External Organisation.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Service</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Locality__c</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Locality__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Service</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dementia Connect - Services (Operated By)</relationshipLabel>
        <relationshipName>Services_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <label>Operations Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opps_email_formula__c</fullName>
        <formula>IF(Contains(Operated_By__r.Name,&apos;Service Office&apos;), 
Operated_By__r.Parent.Locality_Manager__r.Email, 
IF(Contains(Operated_By__r.Name,&apos;Locality&apos;), Operated_By__r.Locality_Manager__r.Email,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opps email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Target_Client_Group__c</fullName>
        <inlineHelpText>Details of other groups targeted by service.</inlineHelpText>
        <label>Other target client group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_type__c</fullName>
        <label>Other type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the free text box if required</inlineHelpText>
        <label>Parking</label>
        <picklist>
            <picklistValues>
                <fullName>Yes-on site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-off site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permission_Attached__c</fullName>
        <label>Permission Attached?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photo_Caption__c</fullName>
        <label>zzdel_Photo Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <label>Photo</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postcode_Constituency__c</fullName>
        <label>Postcode Constituency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Local_Authority__c</fullName>
        <label>Postcode Local Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Primary_Care_Trust__c</fullName>
        <label>Postcode Primary Care Trust</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode_Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcodes_Covered__c</fullName>
        <description>Postcode cover</description>
        <inlineHelpText>Add the post code district (first 4 digits of the postcode) all postcodes must be separated by a comma.  Do not leave a space between commas when entering postcode.</inlineHelpText>
        <label>Postcodes Covered</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_External__c</fullName>
        <description>replace contact first name and last name</description>
        <label>Public contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The name of the person who runs this service</inlineHelpText>
        <label>Primary contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Notes__c</fullName>
        <inlineHelpText>Details of property plans, changes, leases</inlineHelpText>
        <label>Property Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>$RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_progress__c</fullName>
        <label>Record progress</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if the service is by referral only</inlineHelpText>
        <label>Referral  only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refreshments__c</fullName>
        <inlineHelpText>Select from the drop down list and record additional information in the free text box if required</inlineHelpText>
        <label>Refreshments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered_With_Regulator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For registered home care and support services where an application to the appropriate regulator has been approved only</inlineHelpText>
        <label>Registered With Regulator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regulatory_Body__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Body</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>External organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Services_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Service_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service Description</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.service_type__c</field>
                <operation>equals</operation>
                <valueField>Service_Types__c.Service_Type__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Service_Types__c</referenceTo>
        <relationshipLabel>Dementia Connect - Services</relationshipLabel>
        <relationshipName>Dementia_Connect_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restrict_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted access?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 4 OR 5) AND (2 OR 3 OR 6 OR 7 OR 8)</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. Must be a Services Manager</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>CRS and BDC</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>Services Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>equals</operation>
                <value>SM</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CRS and Service Data Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Force.com - Service Data Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>Operations Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>contains</operation>
                <value>Regional Operations Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Title</field>
                <operation>startsWith</operation>
                <value>Locality Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_telephone_number__c</fullName>
        <inlineHelpText>Additional telephone number for the service</inlineHelpText>
        <label>Secondary telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Service Contract number within Business Development Controls</inlineHelpText>
        <label>Service Contract</label>
        <referenceTo>Service_Contract__c</referenceTo>
        <relationshipName>Services_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Criteria__c</fullName>
        <inlineHelpText>Internal services:This field will be redundant after Jan 2015</inlineHelpText>
        <label>Who can use this service?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Data_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SDM who last updated the record</description>
        <label>Service Data Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Reference__c</fullName>
        <displayFormat>Service{000000}</displayFormat>
        <label>Service Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Web_Name__c</fullName>
        <description>If the service is Internal then show the service type name.
If the service is Internal and has a “known as” show the known as name.
If the service is External then show the service name.</description>
        <formula>CASE (Record_Type_Name__c,&quot;Internal&quot;, IF(ISBLANK(Known_As__c ) , TEXT(service_type__c), Known_As__c ),
&quot;External&quot;,Name,
Name)</formula>
        <label>Service Web Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_maximum_capacity__c</fullName>
        <inlineHelpText>Service maximum capacity</inlineHelpText>
        <label>zzdel_Service maximum capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Framework_Principle__c</fullName>
        <label>Services Framework Principle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>